--- a/source/cc_model_training.ipynb
+++ b/source/cc_model_training.ipynb
@@ -41,56 +41,56 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Data Set Information:\n",
-        "\n",
-        "This research aimed at the case of customers default payments in Taiwan and compares the predictive accuracy of probability of default among six data mining methods. From the perspective of risk management, the result of predictive accuracy of the estimated probability of default will be more valuable than the binary result of classification - credible or not credible clients. Because the real probability of default is unknown, this study presented the novel â€œSorting Smoothing Method to estimate the real probability of default. \n",
-        "\n",
-        "With the real probability of default as the response variable (Y), and the predictive probability of default as the independent variable (X), the simple linear regression result (Y = A + BX) shows that the forecasting model produced by artificial neural network has the highest coefficient of determination; its regression intercept (A) is close to zero, and regression coefficient (B) to one. Therefore, among the six data mining techniques, artificial neural network is the only one that can accurately estimate the real probability of default.\n",
-        "\n",
-        "Link: https://archive.ics.uci.edu/ml/datasets/default+of+credit+card+clients#\n",
-        "\n",
-        "\n",
-        "##Attribute Information:\n",
-        "\n",
-        "This research employed a binary variable, default payment (Yes = <code>1</code>, No = <code>0</code>), as the response variable. \n",
-        "\n",
-        "There are 25 variables:\n",
-        "\n",
-        "* ID: ID of each client\n",
-        "* LIMIT_BAL: Amount of given credit in NT dollars (includes individual and family/supplementary credit\n",
-        "* SEX: Gender (1=male, 2=female)\n",
-        "* EDUCATION: (1=graduate school, 2=university, 3=high school, 4=others, 5=unknown, 6=unknown)\n",
-        "* MARRIAGE: Marital status (1=married, 2=single, 3=others)\n",
-        "* AGE: Age in years\n",
-        "* PAY_0: Repayment status in September, 2005 \n",
-        "\n",
-        "Scale: \n",
-        "\n",
-        "-2 = Balance paid in full and no transactions this period (we may refer to this credit card account as having been 'inactive' this period)\n",
-        "\n",
-        "-1 = Balance paid in full, but account has a positive balance at end of period due to recent transactions for which payment has not yet come due\n",
-        "\n",
-        "0 = Customer paid the minimum due amount, but not the entire balance. I.e., the customer paid enough for their account to remain in good standing, but did revolve a balance, \n",
-        "\n",
-        "1 = payment delay for one month, 2 = payment delay for two months, … 8=payment delay for eight months, 9 = payment delay for nine months and above\n",
-        "\n",
-        "* PAY_2: Repayment status in August, 2005 (scale same as above)\n",
-        "* PAY_3: Repayment status in July, 2005 (scale same as above)\n",
-        "* PAY_4: Repayment status in June, 2005 (scale same as above)\n",
-        "* PAY_5: Repayment status in May, 2005 (scale same as above)\n",
-        "* PAY_6: Repayment status in April, 2005 (scale same as above)\n",
-        "* BILL_AMT1: Amount of bill statement in September, 2005 (NT dollar)\n",
-        "* BILL_AMT2: Amount of bill statement in August, 2005 (NT dollar)\n",
-        "* BILL_AMT3: Amount of bill statement in July, 2005 (NT dollar)\n",
-        "* BILL_AMT4: Amount of bill statement in June, 2005 (NT dollar)\n",
-        "* BILL_AMT5: Amount of bill statement in May, 2005 (NT dollar)\n",
-        "* BILL_AMT6: Amount of bill statement in April, 2005 (NT dollar)\n",
-        "* PAY_AMT1: Amount of previous payment in September, 2005 (NT dollar)\n",
-        "* PAY_AMT2: Amount of previous payment in August, 2005 (NT dollar)\n",
-        "* PAY_AMT3: Amount of previous payment in July, 2005 (NT dollar)\n",
-        "* PAY_AMT4: Amount of previous payment in June, 2005 (NT dollar)\n",
-        "* PAY_AMT5: Amount of previous payment in May, 2005 (NT dollar)\n",
-        "* PAY_AMT6: Amount of previous payment in April, 2005 (NT dollar)\n",
+        "#Data Set Information:\r\n",
+        "\r\n",
+        "This research aimed at the case of customers default payments in Taiwan and compares the predictive accuracy of probability of default among six data mining methods. From the perspective of risk management, the result of predictive accuracy of the estimated probability of default will be more valuable than the binary result of classification - credible or not credible clients. Because the real probability of default is unknown, this study presented the novel â€œSorting Smoothing Method to estimate the real probability of default. \r\n",
+        "\r\n",
+        "With the real probability of default as the response variable (Y), and the predictive probability of default as the independent variable (X), the simple linear regression result (Y = A + BX) shows that the forecasting model produced by artificial neural network has the highest coefficient of determination; its regression intercept (A) is close to zero, and regression coefficient (B) to one. Therefore, among the six data mining techniques, artificial neural network is the only one that can accurately estimate the real probability of default.\r\n",
+        "\r\n",
+        "Link: https://archive.ics.uci.edu/ml/datasets/default+of+credit+card+clients#\r\n",
+        "\r\n",
+        "\r\n",
+        "##Attribute Information:\r\n",
+        "\r\n",
+        "This research employed a binary variable, default payment (Yes = <code>1</code>, No = <code>0</code>), as the response variable. \r\n",
+        "\r\n",
+        "There are 25 variables:\r\n",
+        "\r\n",
+        "* ID: ID of each client\r\n",
+        "* LIMIT_BAL: Amount of given credit in NT dollars (includes individual and family/supplementary credit\r\n",
+        "* SEX: Gender (1=male, 2=female)\r\n",
+        "* EDUCATION: (1=graduate school, 2=university, 3=high school, 4=others, 5=unknown, 6=unknown)\r\n",
+        "* MARRIAGE: Marital status (1=married, 2=single, 3=others)\r\n",
+        "* AGE: Age in years\r\n",
+        "* PAY_0: Repayment status in September, 2005 \r\n",
+        "\r\n",
+        "Scale: \r\n",
+        "\r\n",
+        "-2 = Balance paid in full and no transactions this period (we may refer to this credit card account as having been 'inactive' this period)\r\n",
+        "\r\n",
+        "-1 = Balance paid in full, but account has a positive balance at end of period due to recent transactions for which payment has not yet come due\r\n",
+        "\r\n",
+        "0 = Customer paid the minimum due amount, but not the entire balance. I.e., the customer paid enough for their account to remain in good standing, but did revolve a balance, \r\n",
+        "\r\n",
+        "1 = payment delay for one month, 2 = payment delay for two months, … 8=payment delay for eight months, 9 = payment delay for nine months and above\r\n",
+        "\r\n",
+        "* PAY_2: Repayment status in August, 2005 (scale same as above)\r\n",
+        "* PAY_3: Repayment status in July, 2005 (scale same as above)\r\n",
+        "* PAY_4: Repayment status in June, 2005 (scale same as above)\r\n",
+        "* PAY_5: Repayment status in May, 2005 (scale same as above)\r\n",
+        "* PAY_6: Repayment status in April, 2005 (scale same as above)\r\n",
+        "* BILL_AMT1: Amount of bill statement in September, 2005 (NT dollar)\r\n",
+        "* BILL_AMT2: Amount of bill statement in August, 2005 (NT dollar)\r\n",
+        "* BILL_AMT3: Amount of bill statement in July, 2005 (NT dollar)\r\n",
+        "* BILL_AMT4: Amount of bill statement in June, 2005 (NT dollar)\r\n",
+        "* BILL_AMT5: Amount of bill statement in May, 2005 (NT dollar)\r\n",
+        "* BILL_AMT6: Amount of bill statement in April, 2005 (NT dollar)\r\n",
+        "* PAY_AMT1: Amount of previous payment in September, 2005 (NT dollar)\r\n",
+        "* PAY_AMT2: Amount of previous payment in August, 2005 (NT dollar)\r\n",
+        "* PAY_AMT3: Amount of previous payment in July, 2005 (NT dollar)\r\n",
+        "* PAY_AMT4: Amount of previous payment in June, 2005 (NT dollar)\r\n",
+        "* PAY_AMT5: Amount of previous payment in May, 2005 (NT dollar)\r\n",
+        "* PAY_AMT6: Amount of previous payment in April, 2005 (NT dollar)\r\n",
         "* default.payment.next.month: Default payment (1=yes, 0=no)"
       ],
       "metadata": {
@@ -1620,6 +1620,7 @@
         "cm = confusion_matrix(y_test_undersample, y_pred_undersample)\r\n",
         "sns.heatmap(cm, annot=True, cmap=\"Blues\" ,fmt =\".0f\")\r\n",
         "#some test comment\r\n",
+        "#some more test comments\r\n",
         "roc = plot_roc_curve(rf_model, x_test_undersample, y_test_undersample)"
       ],
       "outputs": [
